--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ button:hover{
 
 .landingpage-background{
   margin: 0px;
-  position:static;
+  position:absolute;
   height: 100%;
   width: 100%;
   background: url("../public/background.jpg") no-repeat;
